--- a/_photos/20297677735.md
+++ b/_photos/20297677735.md
@@ -2,5 +2,5 @@
 id: 20297677735
 title: IMG_0351
 src: "https://farm1.staticflickr.com/402/20297677735_328266e919.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/20297677735"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/20297677735"
 ---
