--- a/_photos/24124925279.md
+++ b/_photos/24124925279.md
@@ -2,5 +2,5 @@
 id: 24124925279
 title: IMG_3092
 src: "https://farm2.staticflickr.com/1460/24124925279_a9cd149900.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/24124925279"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/24124925279"
 ---
