--- a/_photos/24492658975.md
+++ b/_photos/24492658975.md
@@ -2,5 +2,5 @@
 id: 24492658975
 title: IMG_3174
 src: "https://farm2.staticflickr.com/1694/24492658975_c4251ddcca.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/24492658975"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/24492658975"
 ---
