--- a/_photos/20776478683.md
+++ b/_photos/20776478683.md
@@ -2,5 +2,5 @@
 id: 20776478683
 title: IMG_2147
 src: "https://farm1.staticflickr.com/608/20776478683_dca73d3c49.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/20776478683"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/20776478683"
 ---
