--- a/_photos/24197117180.md
+++ b/_photos/24197117180.md
@@ -2,5 +2,5 @@
 id: 24197117180
 title: IMG_3094
 src: "https://farm2.staticflickr.com/1465/24197117180_5f070e87e9.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/24197117180"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/24197117180"
 ---
