--- a/_photos/26771914593.md
+++ b/_photos/26771914593.md
@@ -2,5 +2,5 @@
 id: 26771914593
 title: IMG_3497
 src: "https://farm8.staticflickr.com/7471/26771914593_4a53953f08.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/26771914593"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/26771914593"
 ---
