--- a/_photos/27344783936.md
+++ b/_photos/27344783936.md
@@ -2,5 +2,5 @@
 id: 27344783936
 title: IMG_3508
 src: "https://farm8.staticflickr.com/7430/27344783936_4b212ac9e9.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/27344783936"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/27344783936"
 ---
