--- a/_photos/28322571113.md
+++ b/_photos/28322571113.md
@@ -2,5 +2,5 @@
 id: 28322571113
 title: IMG_4328
 src: "https://farm9.staticflickr.com/8844/28322571113_c4cb3d4420.jpg"
-flickr_url: "https://www.flickr.com/photos/96030877%40N06/28322571113"
+flickr_url: "https://www.flickr.com/photos/96030877@N06/28322571113"
 ---
